# renderer-gl

./: .gitignore  Makefile.am  TODO  configure.ac  scerenderer.pc.in
include/SCE/: Makefile.am
include/SCE/renderer/: Makefile.am  SCEGLee.h  SCERBuffer.h  SCERBufferPool.h  SCERFeedback.h  SCERFramebuffer.h  SCERImage.h  SCERLight.h  SCERMaterial.h  SCERMatrix.h  SCEROcclusionQuery.h  SCERPointSprite.h  SCERShader.h  SCERSupport.h  SCERTexture.h  SCERType.h  SCERVertexArray.h  SCERVertexBuffer.h  SCERenderer.h
src/: Makefile.am  SCEGLee.c  SCERBuffer.c  SCERBufferPool.c  SCERFeedback.c  SCERFramebuffer.c  SCERImage.c  SCERLight.c  SCERMaterial.c  SCERMatrix.c  SCEROcclusionQuery.c  SCERPointSprite.c  SCERShader.c  SCERSupport.c  SCERTexture.c  SCERType.c  SCERVertexArray.c  SCERVertexBuffer.c  SCERenderer.c
templates/: c  h
