AM_CPPFLAGS = -I$(srcdir)/../include
lib_LTLIBRARIES = libscerenderer.la
libscerenderer_la_LDFLAGS = -version-info @SCE_RENDERER_LTVERSION@
libscerenderer_la_SOURCES = SCERType.c \
                        SCERLight.c \
                        SCERSupport.c \
                        SCERPointSprite.c \
                        SCERMatrix.c \
                        SCERBuffer.c \
                        SCERVertexArray.c \
                        SCERVertexBuffer.c \
                        SCERShader.c \
                        SCERenderer.c \
                        SCERFramebuffer.c \
                        SCERMaterial.c \
                        SCERImage.c \
                        SCEROcclusionQuery.c \
                        SCERTexture.c
