sce_include_renderer_HEADERS = SCERBuffer.h \
                               SCERVertexArray.h \
                               SCERVertexBuffer.h \
                               SCERFramebuffer.h \
                               SCERImage.h \
                               SCERLight.h \
                               SCERMaterial.h \
                               SCERMatrix.h \
                               SCEROcclusionQuery.h \
                               SCERenderer.h \
                               SCERPointSprite.h \
                               SCERShader.h \
                               SCERSupport.h \
                               SCERTexture.h \
                               SCERType.h
