sce_include_renderer_HEADERS = SCERBuffer.h \
                               SCERBufferPool.h \
                               SCERVertexArray.h \
                               SCERVertexBuffer.h \
                               SCERFeedback.h \
                               SCERFramebuffer.h \
                               SCERLight.h \
                               SCERMaterial.h \
                               SCERMatrix.h \
                               SCEROcclusionQuery.h \
                               SCERenderer.h \
                               SCERPointSprite.h \
                               SCERShader.h \
                               SCERSupport.h \
                               SCERTexture.h \
                               SCERType.h
